<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <Button
            android:id="@+id/donateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="268dp"
            android:layout_marginRight="268dp"
            android:layout_marginBottom="34dp"
            android:onClick="donateButtonPressed"
            android:text="@string/donateButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Amount" />

        <TextView
            android:id="@+id/donateSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="243dp"
            android:layout_marginRight="243dp"
            android:layout_marginBottom="40dp"
            android:text="@string/donateSubtitle"
            app:layout_constraintBottom_toTopOf="@+id/paymentMethod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateTitle" />

        <TextView
            android:id="@+id/donateTitle"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="208dp"
            android:layout_marginRight="208dp"
            android:layout_marginBottom="11dp"
            android:text="@string/donateTitle"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/donateSubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/paymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="215dp"
            android:layout_marginRight="215dp"
            android:layout_marginBottom="282dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toStartOf="@+id/amountPicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donateSubtitle">

            <RadioButton
                android:id="@+id/PayPal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/paypal" />

            <RadioButton
                android:id="@+id/Direct"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/direct" />
        </RadioGroup>

        <NumberPicker
            android:id="@+id/amountPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="215dp"
            android:layout_marginLeft="215dp"
            android:layout_marginTop="181dp"
            android:layout_marginBottom="133dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toEndOf="@+id/paymentMethod"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="357dp"
            android:layout_height="60dp"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountPicker" />

        <TextView
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="25dp"
            android:text="@string/amount"
            app:layout_constraintBottom_toTopOf="@+id/donateButton"
            app:layout_constraintEnd_toStartOf="@+id/paymentAmount"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <EditText
            android:id="@+id/paymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="58dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="82dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Amount"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/amountTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginLeft="47dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/donateButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>